--- a/forum.html
+++ b/forum.html
@@ -127,7 +127,7 @@
             box-shadow: 0 4px 6px rgba(244, 45, 45, 0.1);
         }
         .submit-button:hover {
-            background-color: #B383FE;
+            background-color: #1cc1cdab;
         }
         .opinion-container {
             text-align: left;
@@ -154,12 +154,6 @@
 </head>
 <body>
     <div id="navbar">
-<<<<<<< HEAD
-
-
-=======
-        <a href="resources.html">Book Link</a>
->>>>>>> 0b7fcea8adec181dc0ea6ea370c0acc5a864f8de
         <a href="content.html">Content Sharing</a>
         <a class="active" href="forum.html">Forum Discussion</a>
         <a href="resources.html">Book Link</a>
