--- a/index1.html
+++ b/index1.html
@@ -252,7 +252,7 @@
                 </div>
                 <div class="flip-card-back">
                     <h3>Muhammad Najmi Zulhusni Bin Mohd Sapuan</h3>
-                    <p>Project Manager</p>
+                    <p>Full Stack Developer</p>
                 </div>
             </div>
         </div>
