--- a/resources.html
+++ b/resources.html
@@ -174,11 +174,11 @@
     <script>
         // Predefined book suggestions
         var fairyTaleBooks = [
-            { title: 'Cinderella', author: 'Charles Perrault', link: 'https://www.example.com/cinderella' },
-            { title: 'Snow White', author: 'Brothers Grimm', link: 'https://www.example.com/snow-white' },
-            { title: 'Beauty and the Beast', author: 'Gabrielle-Suzanne Barbot de Villeneuve', link: 'https://www.example.com/beauty-and-the-beast' },
-            { title: 'The Little Mermaid', author: 'Hans Christian Andersen', link: 'https://www.example.com/little-mermaid' },
-            { title: 'Rapunzel', author: 'Brothers Grimm', link: 'https://www.example.com/rapunzel' }
+            { title: 'Cinderella', author: 'Charles Perrault', link: 'https://www.google.com.my/books/edition/Cinderella/DaP3AwAAQBAJ?hl=en&gbpv=1&dq=Cinderella+-+Charles+Perrault&printsec=frontcover' },
+            { title: 'Snow White', author: 'Brothers Grimm', link: 'https://www.google.com.my/books/edition/Snow_White_First_Edition/Jc8nDwAAQBAJ?hl=en&gbpv=0&kptab=overview' },
+            { title: 'Beauty and the Beast', author: 'Gabrielle-Suzanne Barbot de Villeneuve', link: 'https://www.google.com.my/books/edition/Beauty_and_The_Beast/csokDwAAQBAJ?hl=en&gbpv=1&dq=beauty+beast&printsec=frontcover' },
+            { title: 'The Little Mermaid', author: 'Hans Christian Andersen', link: 'https://www.google.com.my/books/edition/Disney_Animated_Classics_The_Little_Merm/FbvbDwAAQBAJ?hl=en&gbpv=1&dq=The+Little+Mermaid&printsec=frontcover' },
+            { title: 'Rapunzel', author: 'Michele Jakubowski', link: 'https://www.google.com.my/books/edition/Rapunzel/8ZIwDwAAQBAJ?hl=en&gbpv=1&dq=Rapunzel&printsec=frontcover' }
         ];
 
         var barbieBooks = [
