Update quiz (certificate)

--- a/quiz.html
+++ b/quiz.html
@@ -218,13 +218,12 @@
     <div id="success-modal" class="modal" style="display: none;">
         <div class="modal-content">
             <span class="close" id="close-modal">&times;</span>
-            <h2>Congratulations!</h2>
-            <p>You have completed all activities successfully!</p>
+            <h2>Brilliant minds! Congratulations! </h2>
+            <p>You have answered all of the questions correctly!</p>
             
             <!-- Audio Player -->
             <audio id="ending-sound">
                 <source src="Audio/ending.mp3" type="audio/mp3">
-                Your browser does not support the audio element.
             </audio>
             
             <!-- Certificate Download Button -->
